[yuantian]add alertdialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".AnimationActivity" />
         <activity android:name=".PermissionsActivity" />
-        <activity android:name=".DialogActivity"/>
-        <activity android:name=".banner.ViewPagerBannerActivity">
+        <activity android:name=".DialogActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+        <activity android:name=".banner.ViewPagerBannerActivity">
         </activity>
     </application>
 
