[yuantian]add circle progress bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:theme="@style/AppTheme">
         <activity android:name=".AnimationActivity" />
         <activity android:name=".PermissionsActivity" />
-        <activity android:name=".DialogActivity">
+        <activity android:name=".DialogActivity"></activity>
+        <activity android:name=".banner.ViewPagerBannerActivity">
+
+        </activity>
+        <activity android:name=".ProgressActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-        </activity>
-        <activity android:name=".banner.ViewPagerBannerActivity">
         </activity>
     </application>
 
