--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".AnimationActivity" >
-
-
-
-        </activity>
-        <activity android:name=".PermissionsActivity" >
-
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".AnimationActivity" />
+        <activity android:name=".PermissionsActivity" />
+        <activity android:name=".DialogActivity">
 
         </activity>
-        <activity android:name=".DialogActivity" >
+        <activity android:name=".banner.ViewPagerBannerActivity" />
+        <activity android:name=".ProgressActivity" />
+        <activity android:name=".RefreshActivity" />
+        <activity android:name=".activityturnanimation.BeforeActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,16 +28,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".banner.ViewPagerBannerActivity">
-
-
-        </activity>
-        <activity android:name=".ProgressActivity">
-
-        </activity>
-        <activity android:name=".RefreshActivity">
-
-
+        <activity android:name=".activityturnanimation.AfterActivity">
 
         </activity>
     </application>
